# throw_iniciative_djangoApp

./: .gitignore  README.md  arqui.md  create_test_data.py  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  urls_api.py  urls_templates.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_created_at_and_more.py
accounts/templates/: base.html
accounts/templates/accounts/: dashboard.html  login.html  register.html  user_confirm_delete.html  user_detail.html  user_form.html  user_list.html
characters/: admin.py  models.py  serializers.py  urls.py  urls_templates.py  views.py
characters/migrations/: 0001_initial.py
characters/templates/: base.html
characters/templates/characters/: character_confirm_delete.html  character_detail.html  character_form.html  character_list.html
characters/templatetags/: character_extras.py
core/: settings.py  urls.py
initiative/: admin.py  models.py  serializers.py  urls.py  views.py
initiative/migrations/: 0001_initial.py
rooms/: admin.py  models.py  serializers.py  urls.py  urls_templates.py  views.py
rooms/migrations/: 0001_initial.py
rooms/templates/rooms/: room_confirm_delete.html  room_detail.html  room_form.html  room_list.html
